--- a/main.html
+++ b/main.html
@@ -9,5 +9,32 @@
 </head>
     <body>
 
+
+        <!--        Header         -->
+
+
+        <div id="sticky-nav-con">
+            <header class="grid-con" id="main-header">
+                <nav id="main-nav" class="col-span-full m-col-start-5 m-col-end-13 l-col-start-5 l-col-end-12">
+                    <h2 class="hidden">Main Navigation</h2>
+                    <input type="checkbox" id="hamburger">
+                    <label for="hamburger">
+                    <img src="images/burger.svg" id="burger" alt="hamburger menu icon">
+                    </label>
+                    <div id="burger-con">
+                        <ul> 
+                            <li><a href="index.html">EVENT</a></li>
+                            <li><a href="stories.html">PROJECTS</a></li>
+                            <li><a href="contact.html">PORTFOLIOS</a></li>
+                        </ul>
+                    </div>
+                </nav>
+                <div id="logo" class="col-start-2 col-end-4 m-col-start-2 m-col-end-4 .l-col-start-1 .l-col-end-4">
+                    <img src="images/billy_beer_logo.svg" alt="Billy Beer Logo">
+                </div>
+
+            </header>
+        </div>
+
     </body>
 </html>
