--- a/main.html
+++ b/main.html
@@ -23,14 +23,14 @@
                     </label>
                     <div id="burger-con">
                         <ul> 
-                            <li><a href="index.html">EVENT</a></li>
-                            <li><a href="stories.html">PROJECTS</a></li>
-                            <li><a href="contact.html">PORTFOLIOS</a></li>
+                            <li><a href="event.html">EVENT</a></li>
+                            <li><a href="projects.html">PROJECTS</a></li>
+                            <li><a href="portfolios.html">PORTFOLIOS</a></li>
                         </ul>
                     </div>
                 </nav>
                 <div id="logo" class="col-start-2 col-end-4 m-col-start-2 m-col-end-4 .l-col-start-1 .l-col-end-4">
-                    <img src="images/billy_beer_logo.svg" alt="Billy Beer Logo">
+                    <img src="#" alt="Fanshawe Logo">
                 </div>
 
             </header>
