--- a/main.html
+++ b/main.html
@@ -138,7 +138,92 @@
         </section>
 
 
-        <section></section>
+        <section id="project" class="grid-con">
+
+            <div class="project-container m-col-start-1 m-col-end-5"></div>
+            <div class="heading-container m-col-start-5 m-col-end-9">
+                <h2>PROJECT</h2>
+            </div>
+            <div class="project-container m-col-start-9 m-col-end-13"></div>
+            <div class="heading-container m-col-start-1 m-col-end-5">
+                <h2>SHOWCASE</h2>
+            </div>
+            <div class="project-container m-col-start-5 m-col-end-9"></div>
+            <div class="project-container m-col-start-9 m-col-end-13"></div>
+            <div class="project-container m-col-start-1 m-col-end-5"></div>
+            <div class="project-container m-col-start-5 m-col-end-9"></div>
+            <div class="project-container m-col-start-9 m-col-end-13"></div>
+
+        </section>
+
+        <section id="reviews" class="grid-con">
+
+            <h2 class="l-col-span-full">REVIEWS</h2>
+
+            <div class="review-container m-col-start-1 m-col-end-5"></div>
+            <div class="review-container m-col-start-5 m-col-end-9"></div>
+            <div class="review-container m-col-start-9 m-col-end-13"></div>
+
+        </section>
+
+        <section id="course-details" class="grid-con">
+            <div class="m-col-start-1 m-col-end-7">
+            <h2>INTERACTIVE MEDIA DESIGN</h2>
+            <p>Unlock your future in digital creativity! Join 
+                our two-year Interactive Media Design 
+                program at Fanshawe College and explore 
+                a world of digital design, development, and 
+                innovation.
+                </p>
+            
+            <P>Why choose us?</P>
+            <P>Gain a comprehensive skill 
+                set in web design, coding, animation, and 
+                more. Access state-of-the-art facilities and 
+                industry-standard software. Open doors to 
+                exciting career opportunities in various 
+                fields.</P>
+
+            <P>  Stay ahead with emerging 
+                technologies and industry-relevant tools!</P>
+            
+            </div>
+
+            <div id="learn-more-button" class="m-col-start-1 m-col-end-4">
+                <button>LEARN MORE</button>
+            </div>
+
+        </section>
+
+        <section id="dev-spotlight" class="grid-con">
+
+            <h2 class="l-col-span-full">DEVELOPER SPOTLIGHT</h2>
+
+            <div class="dev-container m-col-start-1 m-col-end-4"></div>
+            <div class="dev-container m-col-start-4 m-col-end-7"></div>
+            <div class="dev-container m-col-start-7 m-col-end-10"></div>
+            <div class="dev-container m-col-start-10 m-col-end-13"></div>
+
+        </section>
+
+        <section id="portfolio-gallery" class="grid-con">
+
+            <h2 class="l-col-span-full .m-col-span-full">STUDENT PORTFOLIO GALLERY</h2>
+
+            <div class="gallery-container m-col-start-1 m-col-end-4"></div>
+            <div class="gallery-container m-col-start-4 m-col-end-7"></div>
+            <div class="gallery-container m-col-start-7 m-col-end-10"></div>
+            <div class="gallery-container m-col-start-10 m-col-end-13"></div>
+            <div class="gallery-container m-col-start-1 m-col-end-4"></div>
+            <div class="gallery-container m-col-start-4 m-col-end-7"></div>
+            <div class="gallery-container m-col-start-7 m-col-end-10"></div>
+            <div class="gallery-container m-col-start-10 m-col-end-13"></div>
+
+        </section>
+
+        <footer>
+            <section id="footer"></section>
+        </footer>
 
 
     </body>
