--- a/main.html
+++ b/main.html
@@ -60,7 +60,7 @@
             <p class="m-col-start-3 m-col-end-11">  The memorial will honor the bravery of Indian and Canadian soldiers who fought together. Over time, it will become a peaceful park with trails, benches, and displays, preserving their stories and sacrifices for future generations.</p>
         </section>
 
-        <section id="video">
+        <section id="video" class="video-container m-col-start-3 m-col-end-11">
             <video src="video/INDUSTRY_NIGHT.mp4"></video>
         </section>
 
