--- a/main.html
+++ b/main.html
@@ -29,12 +29,12 @@
                         </ul>
                     </div>
                 </nav>
-                <div id="logo" class="col-start-2 col-end-4 m-col-start-2 m-col-end-4 .l-col-start-1 .l-col-end-4">
-                    <img src="#" alt="Fanshawe Logo">
+                <div id="logo" class=" m-col-start-10 m-col-end-13 .l-col-start-10 .l-col-end-13">
+                    <img src="images/fanshawe_logo.svg " alt="Fanshawe Logo">
                 </div>
 
             </header>
-        </section>
+        </section> 
 
 
         <section id="banner">
@@ -60,7 +60,7 @@
             <p class="m-col-start-3 m-col-end-11">  The memorial will honor the bravery of Indian and Canadian soldiers who fought together. Over time, it will become a peaceful park with trails, benches, and displays, preserving their stories and sacrifices for future generations.</p>
         </section>
 
-        <section id="video" class="video-container m-col-start-3 m-col-end-11">
+        <section id="video" class="video-container m-col-start-3 m-col-end-11 ">
             <video src="video/INDUSTRY_NIGHT.mp4"></video>
         </section>
 
