--- a/main.html
+++ b/main.html
@@ -29,14 +29,14 @@
                         </ul>
                     </div>
                 </nav>
-                <div id="logo" class="m-col-start-10 m-col-end-13 .l-col-start-10 .l-col-end-13">
-                    <img src="images/fanshawe_logo.svg " alt="Fanshawe Logo">
+                <div  class="m-col-start-10 m-col-end-13 .l-col-start-10 .l-col-end-13">
+                    <img src="images/fanshawe_logo.svg " alt="Fanshawe Logo" id="logo">
                 </div>
-                <div id="logo-mobile-1" class="col-start-2 col-end-4">
-                    <img src="images/FANSHAWE.svg" alt="text logo">
+                <div  class="col-start-2 col-end-4">
+                    <img src="images/FANSHAWE.svg" alt="text logo" id="logo-mobile-1">
                 </div>
-                <div id="logo-mobile-2" class="col-start-4 col-end-5">
-                    <img src="images/icon.svg" alt="icon">
+                <div  class="col-start-4 col-end-5">
+                    <img src="images/icon.svg" alt="icon" id="logo-mobile-2">
                 </div>
 
             </header>
