--- a/main.html
+++ b/main.html
@@ -13,9 +13,9 @@
         <!--        Header         -->
 
 
-        <section id="sticky-nav-con">
+        <div id="sticky-nav-con">
             <header class="grid-con" id="main-header">
-                <nav id="main-nav" class="col-span-full m-col-start-3 m-col-end-8 l-col-start-3 l-col-end-8">
+                <nav id="main-nav" class="col-span-full m-col-start-5 m-col-end-13 l-col-start-5 l-col-end-12">
                     <h2 class="hidden">Main Navigation</h2>
                     <input type="checkbox" id="hamburger">
                     <label for="hamburger">
@@ -23,18 +23,18 @@
                     </label>
                     <div id="burger-con">
                         <ul> 
-                            <li><a href="event.html">EVENT</a></li>
-                            <li><a href="projects.html">PROJECTS</a></li>
-                            <li><a href="portfolios.html">PORTFOLIOS</a></li>
+                            <li><a href="index.html">EVENT</a></li>
+                            <li><a href="stories.html">PROJECT</a></li>
+                            <li><a href="contact.html">PORTFOLIO</a></li>
                         </ul>
                     </div>
                 </nav>
-                <div  class="m-col-start-10 m-col-end-13 .l-col-start-10 .l-col-end-13">
-                    <img src="images/fanshawe_logo.svg " alt="Fanshawe Logo" id="logo">
+                <div id="logo" class="col-start-2 col-end-4 m-col-start-2 m-col-end-4 .l-col-start-1 .l-col-end-4">
+                    <img src="images/fanshawe_logo.svg" alt="fanshawe_logo">
                 </div>
 
             </header>
-        </section> 
+        </div>
 
 
         <section id="banner">
@@ -247,8 +247,8 @@
         </section>
 
         <footer>
-            <section id="footer">
-                <img src="images/fanshawe_logo.svg" alt="logo">
+            <section id="footer" class="grid-con">
+                <img src="images/fanshawe_logo.svg" alt="logo" class="m-col-start-5 m-col-end-9">
             </section>
 
         </footer>
