update video player

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
     <link href="css/grid.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <title>Hackathon</title>
@@ -252,7 +253,7 @@
             </section>
 
         </footer>
-
+        <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
