html and css updated

--- a/main.html
+++ b/main.html
@@ -16,6 +16,11 @@
 
         <div id="sticky-nav-con">
             <header class="grid-con" id="main-header">
+
+                <div id="logo" class="col-start-2 col-end-4 m-col-start-2 m-col-end-4 .l-col-start-1 .l-col-end-4">
+                    <img src="images/fanshawe_logo.svg" href="#" alt="fanshawe_logo">
+                </div>
+
                 <nav id="main-nav" class="col-span-full m-col-start-5 m-col-end-13 l-col-start-5 l-col-end-12">
                     <h2 class="hidden">Main Navigation</h2>
                     <input type="checkbox" id="hamburger">
@@ -30,9 +35,7 @@
                         </ul>
                     </div>
                 </nav>
-                <div id="logo" class="col-start-2 col-end-4 m-col-start-2 m-col-end-4 .l-col-start-1 .l-col-end-4">
-                    <img src="images/fanshawe_logo.svg" alt="fanshawe_logo">
-                </div>
+
 
             </header>
         </div>
@@ -186,9 +189,18 @@
 
             <h2 class="l-col-span-full">REVIEWS</h2>
 
-            <div class="review-container col-span-full m-col-start-1 m-col-end-5"></div>
-            <div class="review-container col-span-full m-col-start-5 m-col-end-9"></div>
-            <div class="review-container col-span-full m-col-start-9 m-col-end-13"></div>
+            <div class="review-container col-span-full m-col-start-1 m-col-end-5">
+                <p>"These amazing students bring fresh perspectives and innovative ideas to the table. Their dedication to the project is truly inspiring,"</p>
+                <p class="boldtext">- Aimee Hagerty, co-founder and board member for Foundation Sixty6</p>
+            </div>
+            <div class="review-container col-span-full m-col-start-5 m-col-end-9">
+                <p>"It's been incredible to work alongside these talented students. Their passion and dedication reaffirm our commitment to supporting youth mental health."</p>
+                <p class="boldtext">- Bill Hagerty, co-founder and board member for Foundation Sixty6</p>
+            </div>
+            <div class="review-container col-span-full m-col-start-9 m-col-end-13">
+                <p>"Observing the students collaborating with Foundation Sixty6 has been an inspiring journey. The creativity and skill displayed by the students have been truly outstanding."</p>
+                <p class="boldtext">- Marco De Luca, IDP Program coordinator and professor for Fanshawe</p>
+            </div>
 
         </section>
 
@@ -225,10 +237,18 @@
 
             <h2 class="l-col-span-full">DEVELOPER SPOTLIGHT</h2>
 
-            <div class="dev-container col-start-1 col-end-3 m-col-start-1 m-col-end-4"></div>
-            <div class="dev-container col-start-3 col-end-5 m-col-start-4 m-col-end-7"></div>
-            <div class="dev-container col-start-1 col-end-3 m-col-start-7 m-col-end-10"></div>
-            <div class="dev-container col-start-3 col-end-5 m-col-start-10 m-col-end-13"></div>
+            <div class="dev-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
+                <h3>Bozhi Zang</h3>
+            </div>
+            <div class="dev-container col-start-3 col-end-5 m-col-start-4 m-col-end-7">
+                <h3>Qingdong Chen</h3>
+            </div>
+            <div class="dev-container col-start-1 col-end-3 m-col-start-7 m-col-end-10">
+                <h3>Akamjot Singh</h3>
+            </div>
+            <div class="dev-container col-start-3 col-end-5 m-col-start-10 m-col-end-13">
+                <h3>Osarieme Ogbeide</h3>
+            </div>
 
         </section>
 
@@ -236,6 +256,14 @@
 
             <h2 class="l-col-span-full .m-col-span-full">STUDENT PORTFOLIO GALLERY</h2>
 
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4"></div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7"></div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10"></div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13"></div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4"></div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7"></div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10"></div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13"></div>
             <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4"></div>
             <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7"></div>
             <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10"></div>
