html and css updated

--- a/main.html
+++ b/main.html
@@ -134,7 +134,7 @@
 
         <section id="spot" class="grid-con ">
        
-            <h2 class="l-col-span-full">FINALIST SPOTLIGHT</h2>
+            <h2 class="l-col-span-full col-span-full m-col-span-full">FINALIST SPOTLIGHT</h2>
 
             <div class="container col-start-1 col-end-3 m-col-start-1 m-col-end-5">
                 <p>content content content content content content </p>
@@ -151,7 +151,7 @@
 
         <section id="mentions" class="grid-con ">
        
-            <h2 class="l-col-span-full">NOTABLE MENTIONS</h2>
+            <h2 class="l-col-span-full col-span-full m-col-span-full">NOTABLE MENTIONS</h2>
 
             <div class="container col-start-1 col-end-3 m-col-start-1 m-col-end-5">
                 <p>content content content content content content </p>
@@ -187,7 +187,7 @@
 
         <section id="reviews" class="grid-con">
 
-            <h2 class="l-col-span-full">REVIEWS</h2>
+            <h2 class="l-col-span-full col-span-full m-col-span-full">REVIEWS</h2>
 
             <div class="review-container col-span-full m-col-start-1 m-col-end-5">
                 <p>"These amazing students bring fresh perspectives and innovative ideas to the table. Their dedication to the project is truly inspiring,"</p>
@@ -235,7 +235,7 @@
 
         <section id="dev-spotlight" class="grid-con">
 
-            <h2 class="l-col-span-full">DEVELOPER SPOTLIGHT</h2>
+            <h2 class="l-col-span-full col-span-full m-col-span-full">DEVELOPER SPOTLIGHT</h2>
 
             <div class="dev-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
                 <h3>Bozhi Zang</h3>
@@ -254,7 +254,7 @@
 
         <section id="portfolio-gallery" class="grid-con">
 
-            <h2 class="l-col-span-full .m-col-span-full">STUDENT PORTFOLIO GALLERY</h2>
+            <h2 class="l-col-span-full col-span-full m-col-span-full">STUDENT PORTFOLIO GALLERY</h2>
 
             <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4"></div>
             <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7"></div>
@@ -277,7 +277,27 @@
 
         <footer>
             <section id="footer" class="grid-con">
-                <img src="images/fanshawe_logo.svg" alt="logo" class="m-col-start-5 m-col-end-9">
+                <h2 class="hidden">footer</h2>
+                <div><img src="images/fanshawe_logo.svg" alt="logo" class="footer-logo col-span-full col-span-full m-col-span-full"> </div> 
+
+                <div class="social col-span-full m-col-span-full">
+                    <p>© 2024 Copyright Fanshawe College</p>
+                </div>
+
+                <div class="social col-span-full m-col-span-full">
+                    <a href="https://www.instagram.com/fanshawecollege/?hl=en">
+                        <img src="images/insta.png" alt="instagram">
+                    </a>
+
+                    <a href="https://www.youtube.com/myfanshawe">
+                        <img src="images/yt.png" alt="youtube">
+                    </a>
+
+                    <a href="https://www.facebook.com/FanshaweCollege/">
+                        <img src="images/fb.png" alt="facebook">
+                    </a>
+                </div>
+
             </section>
 
         </footer>
