--- a/main.html
+++ b/main.html
@@ -239,15 +239,19 @@
 
             <div class="dev-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
                 <h3>Bozhi Zang</h3>
+                <a href="z.bhozi.com">z.bhozi.com</a>
             </div>
             <div class="dev-container col-start-3 col-end-5 m-col-start-4 m-col-end-7">
                 <h3>Qingdong Chen</h3>
+                <a href="c.qingdong.com">c.qingdong.com</a>
             </div>
             <div class="dev-container col-start-1 col-end-3 m-col-start-7 m-col-end-10">
                 <h3>Akamjot Singh</h3>
+                <a href="s.akamjot.com">s.akamjot.com</a>
             </div>
             <div class="dev-container col-start-3 col-end-5 m-col-start-10 m-col-end-13">
                 <h3>Osarieme Ogbeide</h3>
+                <a href="o.gbeide.com">o.gbeide.com</a>
             </div>
 
         </section>
@@ -256,33 +260,180 @@
 
             <h2 class="l-col-span-full col-span-full m-col-span-full">STUDENT PORTFOLIO GALLERY</h2>
 
-            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4"></div>
-            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7"></div>
-            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10"></div>
-            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13"></div>
-            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4"></div>
-            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7"></div>
-            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10"></div>
-            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13"></div>
-            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4"></div>
-            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7"></div>
-            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10"></div>
-            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13"></div>
-            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4"></div>
-            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7"></div>
-            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10"></div>
-            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13"></div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
+                <h3>AMJAD SAIF</h3>
+                <a href="a.saif.com">a.saif.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7">
+                <h3>BANDARRA SYDNEY</h3>
+                <a href="b.sydney.com">b.sydney.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10">
+                <h3>BENDZSEL KRISTINA</h3>
+                <a href="b.kristina.com">b.kristina.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13">
+                <h3>BENIPAL TAPSHVEER</h3>
+                <a href="b.tapshveer">b.tapshveer</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
+                <h3>BIJU SHIYON</h3>
+                <a href="b.shiyon.com">b.shiyon.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7">
+                <h3>BILYEA ISAAC</h3>
+                <a href="b.isaac.com">b.isaac.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10">
+                <h3>BISHOKARMA KAMANA</h3>
+                <a href="b.kamana.com">b.kamana.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13">
+                <h3>BONDARCHUK DINA </h3>
+                <a href="b.kamana.com">b.kamana.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
+                <h3>BUCK AMARI</h3>
+                <a href="b.amari.com">b.amari.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7">
+                <h3>CANO CARLOS</h3>
+                <a href="c.carlos.com">c.carlos.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10">
+                <h3>CARDENAS IZEL</h3>
+                <a href="c.izel.com">c.izel.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13">
+                <h3>CARRIERE EZRA</h3>
+                <a href="c.ezra.com">c.ezra.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
+                <h3>CELIS EZEKIEL</h3>
+                <a href="c.ezekiel.com">c.ezekiel.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7">
+                <h3>CHAN STEPHANIE</h3>
+                <a href="c.stephaine.com">c.stephaine.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10">
+                <h3>CHU QIAO-YI</h3>
+                <a href="c.qiao.com">c.qiao.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13">
+                <h3>COOPER KAYLA</h3>
+                <a href="c.kayla.com">c.kayla.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
+                <h3>DAMEN MEGHAN</h3>
+                <a href="d.meghan.com">d.meghan.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7">
+                <h3>DASILVA SIMON</h3>
+                <a href="d.simon.com">d.simon.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10">
+                <h3>DHALIWAL SINGH</h3>
+                <a href="d.singh.com">d.singh.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13">
+                <h3>EL MANIARY ALI</h3>
+                <a href="e.maniary.com">e.maniary.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
+                <h3>FAIZAN KHAN</h3>
+                <a href="f.khan.com">f.khan.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7">
+                <h3>FLORES TIMOTHY</h3>
+                <a href="f.timothy.com">f.timothy.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10">
+                <h3>GABBASSOVA MILANA</h3>
+                <a href="g.milana.com">g.milana.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13">
+                <h3>GOHETIA SHELDON</h3>
+                <a href="g.sheldon.com">g.sheldon.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
+                <h3>GREGORY JOYAL</h3>
+                <a href="g.joval.com">g.joval.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7">
+                <h3>HANBURY XAVIERE</h3>
+                <a href="h.xaviere.com">h.xaviere.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10">
+                <h3>HARNOORPREET KAUR</h3>
+                <a href="h.kaur.com">h.kaur.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13">
+                <h3>HO GIA KHANG</h3>
+                <a href="h.gia.com">h.gia.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
+                <h3>HURETAS TANYA MAE</h3>
+                <a href="h.tanya.com">h.tanya.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7">
+                <h3>ISHAN MEHRA</h3>
+                <a href="i.mehra.com">i.mehra.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10">
+                <h3>JASHAN KUMAR</h3>
+                <a href="j.kumar.com">j.kumar.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13">
+                <h3>JAYASINGHE HESHAN </h3>
+                <a href="j.heshan.com">j.heshan.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
+                <h3>JUNTRARATTANAKAMOL APAPAT</h3>
+                <a href="j.apapat.com">j.apapat.com</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7">
+                <h3>KHAN TAYLOR</h3>
+                <a href="k.taylor.com">k.taylor.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10">
+                <h3>LAI YI TING</h3>
+                <a href="l.tingcom">l.tingcom</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13">
+                <h3>LAPUT DIXIE MARIE</h3>
+                <a href="l.dixie.com">l.dixie.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-1 m-col-end-4">
+                <h3>LIE KEITH</h3>
+                <a href="l.keithcom">l.keithcom</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-4 m-col-end-7">
+                <h3>KHAN TAYLOR</h3>
+                <a href="k.taylor.com">k.taylor.com</a>
+            </div>
+            <div class="gallery-container col-start-1 col-end-3 m-col-start-7 m-col-end-10">
+                <h3>LAI YI TING</h3>
+                <a href="l.tingcom">l.tingcom</a>
+            </div>
+            <div class="gallery-container col-start-3 col-end-5 m-col-start-10 m-col-end-13">
+                <h3>LAPUT DIXIE MARIE</h3>
+                <a href="l.dixie.com">l.dixie.com</a>
+            </div>
 
         </section>
 
         <footer>
             <section id="footer" class="grid-con">
                 <h2 class="hidden">footer</h2>
-                <div><img src="images/fanshawe_logo.svg" alt="logo" class="footer-logo col-span-full col-span-full m-col-span-full"> </div> 
-
+                
                 <div class="social col-span-full m-col-span-full">
                     <p>© 2024 Copyright Fanshawe College</p>
                 </div>
+
+                <div class="footer-logo col-span-full l-col-span-full m-col-span-full"><img src="images/fanshawe_logo.svg" alt="logo"> </div> 
+
+                
 
                 <div class="social col-span-full m-col-span-full">
                     <a href="https://www.instagram.com/fanshawecollege/?hl=en">
