--- a/main.html
+++ b/main.html
@@ -137,6 +137,7 @@
             <h2 class="l-col-span-full col-span-full m-col-span-full">FINALIST SPOTLIGHT</h2>
 
             <div class="container col-start-1 col-end-3 m-col-start-1 m-col-end-5">
+                <img src="images/image_1_357px.jpg" alt="">
                 <p>content content content content content content </p>
             </div>
 
