image with 3 size

--- a/main.html
+++ b/main.html
@@ -137,7 +137,13 @@
             <h2 class="l-col-span-full col-span-full m-col-span-full">FINALIST SPOTLIGHT</h2>
 
             <div class="container col-start-1 col-end-3 m-col-start-1 m-col-end-5">
-                <img src="images/image_1_357px.jpg" alt="">
+                <img srcset="
+                images/image_1_484px.jpg 484w,
+                images/image_1_197px.jpg 197w,
+                images/image_1_140px.jpg 140w,
+                "
+                src="images/image_1_484px.jpg" alt=""
+                >
                 <p>content content content content content content </p>
             </div>
 
