--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/grid.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <title>Hackathon</title>
@@ -65,31 +65,20 @@
         </section>
         
         <div class="grid-con">
-        <section id="video" class="video-container col-span-full ">
-            <video controls preload="metadata">
-                <source src="video/INDUSTRY_NIGHT.mp4" type="video/mp4">
-            </video>
-
-            <div class="video-controls hidden" id="video-controls">
-                <button id="play-button">
-                    <i class="fa fa-play-circle-o"></i>
-                </button>
-
-                <button id="pause-button">
-                    <i class="fa fa-pause-circle-o"></i>
-                </button>
-
-                <button id="stop-button">
-                    <i class="fa fa-stop-ciricle-o"></i>
-                </button>
-                <i class="fa fa-volume-up"></i>
-                <input type="range" id="change-vol" step="0.05" min="0" max="1" value="1">
-
-                <button id="full-screen">
-                    <i class="fa fa-arrows-alt"></i>
-                </button>
-            </div>
-        </section>
+            <section id="player-container" class="col-span-full m-col-start-2 m-col-end-12">
+                <video controls preload="metadata" poster="images/placeholder.jpg">
+                    <source src="video/INDUSTRY_NIGHT.mp4" type="video/mp4">
+                <p>Your browser does not support the video tag.</p>
+                </video>
+                <div class="video-controls hidden" id="video-controls">
+                    <button id="play-button"><i class="fa fa-play-circle-o"></i></button>
+                    <button id="pause-button"><i class="fa fa-pause-circle-o"></i></button>
+                    <button id="stop-button"><i class="fa fa-stop-circle-o"></i></button>
+                    <i class="fa fa-volume-up"></i>
+                    <input type="range" id="change-vol" step="0.05" min="0" max="1" value="1">
+                    <button id="full-screen"><i class="fa fa-arrows-alt"></i></button>
+                </div>
+            </section>
         </div>
 
         <section id="event-details" class="grid-con">
@@ -452,7 +441,7 @@
             </section>
 
         </footer>
-        <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+        <script src="js/thirdparty.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
