--- a/main.html
+++ b/main.html
@@ -126,13 +126,8 @@
             <h2 class="l-col-span-full col-span-full m-col-span-full">FINALIST SPOTLIGHT</h2>
 
             <div class="container col-start-1 col-end-3 m-col-start-1 m-col-end-5">
-                <img srcset="
-                images/image_1_484px.jpg 484w,
-                images/image_1_197px.jpg 197w,
-                images/image_1_140px.jpg 140w,
-                "
-                src="images/image_1_484px.jpg" alt=""
-                >
+            
+                <h3>Finalist #1</h3>
                 <p>content content content content content content </p>
             </div>
 
@@ -165,7 +160,17 @@
 
         <section id="project" class="grid-con">
 
-            <div class="col-start-1 col-end-3 project-container m-col-start-1 m-col-end-5"></div>
+            <div class="col-start-1 col-end-3  m-col-start-1 m-col-end-5">
+                <img  
+                sizes="100vw"
+                srcset="
+                images/image_1_484px.jpg 484w,
+                images/image_1_197px.jpg 197w,
+                images/image_1_140px.jpg 140w,
+                "
+                src="images/image_1_484px.jpg" alt="presentation image" id="spot-img-1"
+                >
+            </div>
             <div class="heading-container col-start-3 col-end-5 m-col-start-5 m-col-end-9">
                 <h2>PROJECT</h2>
             </div>
