--- a/main.html
+++ b/main.html
@@ -166,7 +166,7 @@
                 srcset="
                 images/image_1_484px.jpg 484w,
                 images/image_1_197px.jpg 197w,
-                images/image_1_140px.jpg 140w,
+                images/image_1_140px.jpg 140w
                 "
                 src="images/image_1_484px.jpg" alt="presentation image" id="spot-img-1"
                 >
