--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
             <header class="grid-con" id="main-header">
 
                 <div id="logo" class="col-start-2 col-end-4 m-col-start-2 m-col-end-4 .l-col-start-1 .l-col-end-4">
-                    <img src="images/fanshawe_logo.svg" href="#" alt="fanshawe_logo">
+                    <img src="images/fanshawe_logo.svg" alt="fanshawe_logo">
                 </div>
 
                 <nav id="main-nav" class="col-span-full m-col-start-5 m-col-end-13 l-col-start-5 l-col-end-12">
@@ -156,7 +156,7 @@
             </div>
 
             <div class="container col-start-3 col-end-5 m-col-start-5 m-col-end-9">
-                <img src="images/team 5.png" alt="presentation image" >
+                <img src="images/team5.png" alt="presentation image" >
                 <h3>Finalist #5</h3>
                 <p>Dev Pandya | Jeet Patel | Sahil Gosaliya | Aiden Wotton | Jason Difuntorum</p>
             </div>
@@ -175,11 +175,11 @@
                 <img  
                 sizes="100vw"
                 srcset="
-                images/image_1_484px.jpg 484w,
-                images/image_1_197px.jpg 197w,
-                images/image_1_140px.jpg 140w
+                images/image_8_475px.jpg 475w,
+                images/image_8_223px.jpg 223w,
+                images/image_8_180px.jpg 180w
                 "
-                src="images/image_1_484px.jpg" alt="presentation image">
+                src="images/image_8_475px.jpg" alt="presentation image">
             </div>
             <div class="heading-container col-start-3 col-end-5 m-col-start-5 m-col-end-9">
                 <h2>PROJECT</h2>
@@ -190,7 +190,7 @@
                 srcset="
                 images/image_2_475px.jpg 475w,
                 images/image_2_223px.jpg 223w,
-                images/image_2_180px.jpg 180w,
+                images/image_2_180px.jpg 180w
                 "
                 src="images/image_2_475px.jpg" alt="presentation image">
             </div>
@@ -202,7 +202,7 @@
                 srcset="
                 images/image_3_475px.jpg 475w,
                 images/image_3_223px.jpg 223w,
-                images/image_3_180px.jpg 180w,
+                images/image_3_180px.jpg 180w
                 "
                 src="images/image_3_475px.jpg" alt="presentation image"></div>
             
@@ -211,7 +211,7 @@
                 srcset="
                 images/image_4_475px.jpg 475w,
                 images/image_4_223px.jpg 223w,
-                images/image_4_180px.jpg 180w,
+                images/image_4_180px.jpg 180w
                 "
                 src="images/image_4_475px.jpg" alt="presentation image"></div>
             <div class="col-start-1 col-end-3  m-col-start-1 m-col-end-5"><img  
@@ -219,7 +219,7 @@
                 srcset="
                 images/image_5_475px.jpg 475w,
                 images/image_5_223px.jpg 223w,
-                images/image_5_180px.jpg 180w,
+                images/image_5_180px.jpg 180w
                 "
                 src="images/image_5_475px.jpg" alt="presentation image"></div>
             <div class="col-start-3 col-end-5  m-col-start-5 m-col-end-9"><img  
@@ -227,7 +227,7 @@
                 srcset="
                 images/image_6_475px.jpg 475w,
                 images/image_6_223px.jpg 223w,
-                images/image_6_180px.jpg 180w,
+                images/image_6_180px.jpg 180w
                 "
                 src="images/image_6_475px.jpg" alt="presentation image"></div>
             <div class="col-start-1 col-end-5 m-col-start-9 m-col-end-13"><img  
@@ -235,7 +235,7 @@
                 srcset="
                 images/image_7_475px.jpg 475w,
                 images/image_7_223px.jpg 223w,
-                images/image_7_180px.jpg 180w,
+                images/image_7_180px.jpg 180w
                 "
                 src="images/image_7_475px.jpg" alt="presentation image"></div>
 
