--- a/main.html
+++ b/main.html
@@ -29,9 +29,9 @@
                     </label>
                     <div id="burger-con">
                         <ul> 
-                            <li><a href="index.html">EVENT</a></li>
-                            <li><a href="stories.html">PROJECT</a></li>
-                            <li><a href="contact.html">PORTFOLIO</a></li>
+                            <li><a href="#event-details">EVENT</a></li>
+                            <li><a href="#project">PROJECT</a></li>
+                            <li><a href="#portfolio-gallery">PORTFOLIO</a></li>
                         </ul>
                     </div>
                 </nav>
